# ai_expense_claim

./: .pre-commit-config.yaml  README.md  pyproject.toml
ai_expense_claim/: hooks.py  install.py  modules.txt
ai_expense_claim/ai_expense_claim/doctype/ai_bill_test/: __init__.py  ai_bill_test.js  ai_bill_test.json  ai_bill_test.py  test_ai_bill_test.py
ai_expense_claim/ai_expense_claim/doctype/ai_bill_test_detail/: __init__.py  ai_bill_test_detail.json  ai_bill_test_detail.py
ai_expense_claim/ai_expense_claim/doctype/ai_expense_settings/: ai_expense_settings.js  ai_expense_settings.json  ai_expense_settings.py  test_ai_expense_settings.py
ai_expense_claim/api/: expense.py  utils.py
ai_expense_claim/fixtures/: custom_field.json  property_setter.json
ai_expense_claim/integration/: openai.py
ai_expense_claim/public/js/: ai_bill_processor.bundle.js  expense_claim.js
ai_expense_claim/public/js/components/: AIBillFileItem.vue  AIBillProcessorDialog.vue
